This updates some of the changes recommended in the comment, also covers the issue for colors

--- a/src/main/java/assets/css/custom.css
+++ b/src/main/java/assets/css/custom.css
@@ -7,7 +7,7 @@ html, body{
 }
 .header {
     background-color: white;
-    width: 85%;
+    width: 82%;
     overflow: hidden;
     padding: 20px 10px;
     border: 5px solid black;
@@ -63,7 +63,7 @@ hr{
     align-content: space-around;
     flex-basis: auto;
     text-align: center;
-    width: 90%;
+    width: 87%;
     height: 90%;
 }
 
@@ -136,7 +136,7 @@ td:hover {
 }
 .sidenav {
     height: 100%;
-    width: 10%;
+    width: 13%;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -147,12 +147,15 @@ td:hover {
 }
 
 .sidenav button {
+    cursor: pointer;
     width: 100%;
     padding: 6px 8px 6px 16px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: black;
+    background-color: white;
     display: block;
+    border-bottom: 5px solid black;
 }
 .sidenav a:hover {
     color: #f1f1f1;
